--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -11,17 +11,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="end"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
         android:textAlignment="textEnd"
         android:textColor="@color/colorText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textSize="13sp" />
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/date_note_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingRight="20dp"
         android:gravity="end"
+        android:layout_below="@id/title_note_textview"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:textAlignment="textEnd"
@@ -34,5 +40,5 @@
         android:layout_marginLeft="7.5dp"
         android:layout_marginRight="7.5dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorBackground" />
+        android:background="@color/colorHorLine" />
 </RelativeLayout>
