--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -4,7 +4,7 @@
     android:id="@+id/item_note_relativelay"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".EditNotesFragment">
+    tools:context=".fragments.EditNotesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
