--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,6 +9,11 @@
         android:title="@string/add_note"
         app:showAsAction="always" />
     <item
+        android:id="@+id/action_delete_notes"
+        android:icon="@mipmap/ic_delete_notes"
+        android:title="@string/add_note"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_sort_by_date"
         android:title="@string/sort_by_date"
         app:showAsAction="never"/>
