--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,8 +11,13 @@
     <item
         android:id="@+id/action_delete_notes"
         android:icon="@mipmap/ic_delete_notes"
-        android:title="@string/add_note"
-        app:showAsAction="ifRoom" />
+        android:title="@string/delete_note"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_send_notes"
+        android:icon="@mipmap/ic_send_by_email"
+        android:title="@string/send_note"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_sort_by_date"
         android:title="@string/sort_by_date"
